# forge

./: .gitignore  .npmrc  AGENTS.md  ARCHITECTURE.md  BUILD_SIMPLIFICATION.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LATER.md  LICENSE-APACHE-2.0  README.md  audit.toml  deny.toml  eslint.config.js  justfile  package-lock.json  package.json  product.json
.agents/: default.md
.forge-agents/: plugin.json
.github/: copilot-instructions.md
crates/forge-agents/: Cargo.toml  README.md
crates/forge-agents/src/: def.rs  error.rs  lib.rs  memory.rs  orchestrator.rs  skill_loader.rs
crates/forge-agents/tests/: agent_loader.rs  orchestrator.rs  skill_loader.rs
crates/forge-agents/tests/common/: mod.rs
crates/forge-cli/: Cargo.toml  README.md
crates/forge-cli/src/: display.rs  ipc.rs  lib.rs  main.rs  mcp.rs  skill.rs  socket.rs
crates/forge-cli/tests/: cli_args.rs  skill_install.rs
crates/forge-cli/tests/fixtures/sample-skill/: SKILL.md
crates/forge-core/: Cargo.toml  README.md
crates/forge-core/benches/: event_log_and_superseded.rs
crates/forge-core/src/: approvals.rs  config_file.rs  error.rs  event.rs  event_log.rs  ids.rs  lib.rs  mcp_state.rs  meta.rs  process.rs  roster.rs  runtime_dir.rs  settings.rs  skill.rs  tool.rs  transcript.rs  types.rs  url_safety.rs  usage.rs  workspace.rs  workspaces.rs
crates/forge-core/src/credentials/: env.rs  keyring.rs  layered.rs  mod.rs
crates/forge-core/tests/: credentials_keyring_mock.rs  event_conventions.rs  event_log_bounded_read.rs  event_log_persistence.rs  event_wire_shape.rs  meta_toml.rs  schema_snapshot.rs  transcript_bounded_read.rs  transcript_roundtrip.rs  workspace_gitignore.rs  workspaces_toml.rs
crates/forge-fs/: Cargo.toml  README.md
crates/forge-fs/benches/: mutate.rs  tree_walk.rs
crates/forge-fs/src/: lib.rs  limits.rs  mutate.rs  tree.rs
crates/forge-fs/tests/: fs_edit.rs  fs_read.rs  fs_size_limits.rs  fs_write.rs
crates/forge-ipc/: Cargo.toml  README.md
crates/forge-ipc/benches/: frame.rs
crates/forge-ipc/src/: lib.rs
crates/forge-ipc/tests/: frame_sizing.rs
crates/forge-lsp/: Cargo.toml  README.md
crates/forge-lsp/benches/: streaming.rs
crates/forge-lsp/src/: bootstrap.rs  lib.rs  registry.rs  server.rs
crates/forge-lsp/tests/: http_downloader.rs  stdio_roundtrip.rs
crates/forge-mcp/: Cargo.toml  README.md
crates/forge-mcp/benches/: http_transport.rs
crates/forge-mcp/src/: import.rs  lib.rs  manager.rs
crates/forge-mcp/src/transport/: http.rs  mod.rs  ssrf.rs  stdio.rs
crates/forge-mcp/tests/: http_roundtrip.rs  import_fixtures.rs  manager_subprocess.rs  pump_concurrent.rs  stdio_roundtrip.rs
crates/forge-mcp/tests/fixtures/import/: claude_desktop_config.json  codex_config.toml  continue_config.json  cursor_mcp.json  kiro_mcp.json  vscode_mcp.json
crates/forge-oci/: Cargo.toml  README.md
crates/forge-oci/src/: lib.rs  podman.rs  runner.rs
crates/forge-oci/tests/: podman_integration.rs
crates/forge-providers/: Cargo.toml  README.md
crates/forge-providers/benches/: ollama_stream.rs
crates/forge-providers/data/: prices.toml
crates/forge-providers/src/: lib.rs  ollama.rs  pricing.rs  runtime.rs  sse.rs
crates/forge-providers/src/anthropic/: mod.rs  translate.rs
crates/forge-providers/src/openai/: custom.rs  mod.rs  translate.rs
crates/forge-providers/tests/: anthropic.rs  mock_provider.rs  ollama.rs  openai.rs  openai_custom.rs
crates/forge-providers/tests/fixtures/: anthropic_text_and_tool_use.sse  openai_text_and_tool_use.sse
crates/forge-session/: Cargo.toml  README.md
crates/forge-session/benches/: orchestrator.rs  resource_monitor.rs  tool_invoke.rs
crates/forge-session/src/: archive.rs  bg_agents.rs  byte_budget.rs  compaction.rs  dispatcher_cache.rs  error.rs  lib.rs  log_fields.rs  main.rs  orchestrator.rs  pid_file.rs  provider_spec.rs  resource_monitor.rs  sandbox.rs  server.rs  session.rs  socket_path.rs  starttime.rs  usage_flush.rs
crates/forge-session/src/sandbox/: level2.rs
crates/forge-session/src/tools/: agent_spawn.rs  args.rs  fs_edit.rs  fs_read.rs  fs_write.rs  mcp.rs  memory_write.rs  mod.rs  shell_exec.rs
crates/forge-session/tests/: agent_spawn.rs  agent_spawn_live.rs  archive.rs  archive_shutdown.rs  bg_agents_tracing.rs  byte_budget.rs  credentials_pull.rs  eprintln_audit.rs  fs_read_tool.rs  handshake.rs  memory_injection.rs  ollama_url_validation.rs  orchestrator.rs  pid_file_lifecycle.rs  provider_selection.rs  provider_swap.rs  rerun_branch.rs  rerun_fresh.rs  rerun_replace.rs  session_ended.rs  session_error.rs  socket_path_fallback.rs  step_events.rs  subscribe_replay.rs  uds_bind_symlink_race.rs  uds_socket_permissions.rs
crates/forge-session/tests/common/: mod.rs
crates/forge-session/tests/headless_session/: basic.rs
crates/forge-shell/: Cargo.toml  README.md  build.rs  tauri.conf.json
crates/forge-shell/capabilities/: default.json
crates/forge-shell/src/: bridge.rs  containers_ipc.rs  context_fetch.rs  credentials_ipc.rs  dashboard.rs  dashboard_sessions.rs  ipc.rs  lib.rs  main.rs  memory_ipc.rs  providers_ipc.rs  usage_ipc.rs  window_manager.rs  window_spec.rs
crates/forge-shell/src-tauri/: tauri.conf.json
crates/forge-shell/src-tauri/capabilities/: default.json
crates/forge-shell/src-tauri/icons/: README.md
crates/forge-shell/tests/: approval_commands.rs  bridge_e2e.rs  bridge_registry.rs  context_fetch_http.rs  dashboard.rs  dashboard_sessions.rs  eprintln_audit.rs  ipc_authz.rs  ipc_authz_tracing.rs  ipc_bg_agents.rs  ipc_commands.rs  ipc_containers.rs  ipc_context_fetch.rs  ipc_emit_target.rs  ipc_fs.rs  ipc_layouts.rs  ipc_lsp.rs  ipc_mcp.rs  ipc_memory.rs  ipc_providers.rs  ipc_roster.rs  ipc_settings.rs  ipc_terminal.rs
crates/forge-shell/tests/common/: mod.rs
crates/forge-term/: Cargo.toml  README.md
crates/forge-term/benches/: throughput.rs
crates/forge-term/src/: lib.rs  vt.rs
docs/: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DESIGN.md  README.md  configuration.md  forge-mocks.html
remote/: package-lock.json  package.json
(+435 files in other folders)
