[workspace]
members = [
    "crates/forge-core",
    "crates/forge-ipc",
    "crates/forge-providers",
    "crates/forge-mcp",
    "crates/forge-agents",
    "crates/forge-session",
    "crates/forge-oci",
    "crates/forge-fs",
    "crates/forge-lsp",
    "crates/forge-term",
    "crates/forge-cli",
    "crates/forge-shell",
]
resolver = "2"
