[package]
name = "forge-agents"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
forge-core = { path = "../forge-core" }
gray_matter = "0.3"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
futures = "0.3"
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
