[package]
name = "forge-core"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
ts-rs = "12"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["io-util", "fs", "time", "sync", "rt", "process", "macros"] }
toml = "0.8"
dirs = "5"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
criterion = "0.5"

[[bench]]
name = "event_log_and_superseded"
harness = false
