[package]
name = "forge-fs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
glob = "0.3"
hex = "0.4"
sha2 = "0.10"
similar = "2"
tempfile = "3"
thiserror = "1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"

[[bench]]
name = "mutate"
harness = false
