[package]
name = "forge-fs"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
glob = "0.3"
hex = "0.4"
# F-126: gitignore-aware directory walking for the FilesSidebar. Respects
# `.gitignore`, `.ignore`, global gitignore, and parent chains, matching the
# behavior VS Code's file explorer has out of the box. The non-ignored
# `list_tree` is retained for callers that want raw `read_dir` semantics.
ignore = "0.4"
sha2 = "0.10"
similar = "2"
tempfile = "3"
thiserror = "1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"

[[bench]]
name = "mutate"
harness = false

[[bench]]
name = "tree_walk"
harness = false
