[package]
name = "forge-ipc"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
bytes = "1"
forge-core = { path = "../forge-core" }
# F-155: `IpcMessage::McpServersList` and `McpState` event carry
# `forge_mcp::McpServerInfo` / `McpStateEvent` / `ServerState` values so the
# daemon's unified manager view flows to the shell unchanged. forge-mcp itself
# only depends on forge-core, so the addition stays acyclic.
forge-mcp = { path = "../forge-mcp" }
futures = "0.3"
# `rc` is required because `IpcEvent.event: forge_core::Event` contains
# `Arc<str>` hot fields (F-112) and the framed reader deserializes `IpcEvent`.
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "net", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }

[[bench]]
name = "frame"
harness = false
