[package]
name = "forge-mcp"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
dirs = "6.0.0"
forge-core = { path = "../forge-core" }
# `futures::StreamExt` drives the SSE `bytes_stream()` in the HTTP transport
# reader task.
futures = "0.3"
# HTTP transport (F-129). Feature set mirrors forge-providers: rustls-tls
# avoids a system OpenSSL build-time dep, `stream` enables `bytes_stream()`
# for SSE, `json` for the POST request body.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "macros", "rt", "rt-multi-thread", "time"] }
# F-130 state_stream adapts `tokio::sync::broadcast` into a futures `Stream`
# so the IPC layer can consume `McpStateEvent`s without caring about the
# broadcast channel shape.
tokio-stream = { version = "0.1", features = ["sync"] }
# Codex source format (F-131) stores MCP servers in `~/.codex/config.toml`.
toml = "0.8"
tracing = "0.1"
# F-132: `McpServerInfo`, `ServerState`, and `McpStateEvent` cross the Tauri
# boundary as return types / emitted events; ts-rs emits their TypeScript
# shapes into `web/packages/ipc/src/generated/` alongside forge-core's types.
ts-rs = "12"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["process", "io-util", "sync", "macros", "rt", "rt-multi-thread", "time", "test-util"] }
# Used by the HTTP transport integration test to stub POST + SSE endpoints.
wiremock = "0.6"

# Mock stdio MCP server used by the stdio transport integration test.
# Not shipped: this only exists so tests have a deterministic, dependency-free
# subprocess to round-trip JSON-RPC against.
[[bin]]
name = "forge-mcp-mock-stdio"
path = "tests/bin/mock_stdio.rs"
test = false
doc = false
