[package]
name = "forge-mcp"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
# F-369: gates the in-memory pump transport + `manager::test_util` module
# used by the concurrent-call integration test. Not enabled by default so
# the production build excludes the mock transport entirely. The
# `pump_concurrent` integration test declares this as a required-feature
# below, and `cargo test -p forge-mcp --features test-util` turns it on.
test-util = []

[dependencies]
anyhow = "1"
# F-380: `McpStateEvent.at` carries a `chrono::DateTime<Utc>` now; the manager
# stamps each state transition with `Utc::now()`.
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6.0.0"
forge-core = { path = "../forge-core" }
# `futures::StreamExt` drives the SSE `bytes_stream()` in the HTTP transport
# reader task.
futures = "0.3"
# HTTP transport (F-129). Feature set mirrors forge-providers: rustls-tls
# avoids a system OpenSSL build-time dep, `stream` enables `bytes_stream()`
# for SSE, `json` for the POST request body.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
# SSRF guard (transport/ssrf.rs) uses url::Host for IP-range matching. url is
# already an indirect dep via reqwest; pinning it directly avoids relying on
# reqwest's internal re-exports.
url = "2"
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "macros", "rt", "rt-multi-thread", "time"] }
# F-130 state_stream adapts `tokio::sync::broadcast` into a futures `Stream`
# so the IPC layer can consume `McpStateEvent`s without caring about the
# broadcast channel shape.
tokio-stream = { version = "0.1", features = ["sync"] }
# Codex source format (F-131) stores MCP servers in `~/.codex/config.toml`.
toml = "0.8"
tracing = "0.1"
# F-348: URL parsing for redacting query strings, fragments, and userinfo
# out of error messages and tracing fields before they reach log sinks or
# the `Degraded { reason }` broadcast. Already pulled in transitively by
# reqwest; declared directly so the transport can call `url::Url::parse`.
url = "2"
# F-132: `McpServerInfo`, `ServerState`, and `McpStateEvent` cross the Tauri
# boundary as return types / emitted events; ts-rs emits their TypeScript
# shapes into `web/packages/ipc/src/generated/` alongside forge-core's types.
ts-rs = "12"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["process", "io-util", "sync", "macros", "rt", "rt-multi-thread", "time", "test-util"] }
# Used by the HTTP transport integration test to stub POST + SSE endpoints.
wiremock = "0.6"

# Mock stdio MCP server used by the stdio transport integration test.
# Not shipped: this only exists so tests have a deterministic, dependency-free
# subprocess to round-trip JSON-RPC against.
[[bin]]
name = "forge-mcp-mock-stdio"
path = "tests/bin/mock_stdio.rs"
test = false
doc = false

# F-369: concurrent-pump coverage reaches into the `test_util` module
# that's feature-gated out of production builds. Declaring the feature
# here means the test target only compiles when `--features test-util`
# is passed, so default `cargo test -p forge-mcp` does *not* silently
# drag the mock transport back in.
[[test]]
name = "pump_concurrent"
path = "tests/pump_concurrent.rs"
required-features = ["test-util"]
