[package]
name = "forge-providers"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
dirs = "6.0.0"
forge-core = { path = "../forge-core" }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "rt", "macros"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3"
