[package]
name = "forge-providers"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
# F-586: enable the `RuntimeProvider::Mock` variant for callers outside the
# `forge-providers` test target (e.g. `forge-session::tests::provider_swap`,
# any future cross-crate integration suite). Production binaries leave this
# off; the `Mock` arm vanishes from the enum, so the dashboard's IPC layer
# cannot dispatch to it even via direct `SwappableProvider::swap` from
# another crate.
testing = []

[dependencies]
anyhow = "1"
bytes = "1"
dirs = "6.0.0"
forge-core = { path = "../forge-core" }
futures = "0.3"
# `parking_lot::Mutex` for `MockProvider` interior state — its guards are not
# poisoned on holder-thread panic, so a panicking test does not cascade into
# every subsequent `.lock()` call. Already present transitively via reqwest's
# dependency tree; declared here for direct use.
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "rt", "macros", "time"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "time"] }
futures = "0.3"
wiremock = "0.6"

# F-108: criterion bench covering the hottest per-token path in the app.
# `harness = false` disables libtest so criterion's own harness runs.
[[bench]]
name = "ollama_stream"
harness = false
