[package]
name = "forge-session"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "forge_session"
path = "src/lib.rs"

[[bin]]
name = "forged"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
forge-core = { path = "../forge-core" }
forge-fs = { path = "../forge-fs" }
forge-ipc = { path = "../forge-ipc" }
forge-providers = { path = "../forge-providers" }
futures = "0.3"
libc = "0.2"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["net", "io-util", "fs", "rt-multi-thread", "macros", "sync", "process", "time", "signal"] }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support", "async_tokio"] }
forge-cli = { path = "../forge-cli" }
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
similar = "2"
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "time", "net", "process"] }

[[bench]]
name = "orchestrator"
harness = false

[[bench]]
name = "tool_invoke"
path = "benches/tool_invoke.rs"
harness = false

[[test]]
name = "headless_session_basic"
path = "tests/headless_session/basic.rs"

[[test]]
name = "session_ended"
path = "tests/session_ended.rs"

[[test]]
name = "archive"
path = "tests/archive.rs"

[[test]]
name = "archive_shutdown"
path = "tests/archive_shutdown.rs"

[[test]]
name = "provider_selection"
path = "tests/provider_selection.rs"

[[test]]
name = "pid_file_lifecycle"
path = "tests/pid_file_lifecycle.rs"

[[test]]
name = "uds_socket_permissions"
path = "tests/uds_socket_permissions.rs"

[[test]]
name = "socket_path_fallback"
path = "tests/socket_path_fallback.rs"

[[test]]
name = "uds_bind_symlink_race"
path = "tests/uds_bind_symlink_race.rs"

[[test]]
name = "session_error"
path = "tests/session_error.rs"

[[test]]
name = "rerun_replace"
path = "tests/rerun_replace.rs"
