[package]
name = "forge-session"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "forge_session"
path = "src/lib.rs"

[[bin]]
name = "forged"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
# F-132: `load_mcp_manager` resolves the user-scope `~/.mcp.json` via
# `dirs::home_dir`. Pinned to the 6.x line used elsewhere in the workspace.
dirs = "6.0.0"
forge-agents = { path = "../forge-agents" }
forge-core = { path = "../forge-core" }
forge-fs = { path = "../forge-fs" }
forge-ipc = { path = "../forge-ipc" }
# F-132: MCP tool dispatch inside `run_turn`. The daemon builds an
# `McpManager` from workspace + user `.mcp.json`, starts every configured
# server, and registers each advertised tool as a `Tool` trait impl in the
# session dispatcher so agents can invoke MCP tools alongside built-ins.
forge-mcp = { path = "../forge-mcp" }
# F-596: Level 2 sandbox profile delegates step execution to a
# `ContainerRuntime` (typically `PodmanRuntime`) shipped by forge-oci.
forge-oci = { path = "../forge-oci" }
forge-providers = { path = "../forge-providers" }
futures = "0.3"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
# F-371: structured tracing across daemon-side emit failures, turn errors,
# and MCP lifecycle. Emission only — no subscriber is installed in `forged`.
tracing = "0.1"
tokio = { version = "1", features = ["net", "io-util", "fs", "rt-multi-thread", "macros", "sync", "process", "time", "signal"] }
# F-587: orchestrator-side credential pull. `SecretString` is the at-boundary
# type for every credential value; `ExposeSecret` is the deliberate-exposure
# call gate. We never stringify or log the value.
secrecy = "0.10"

# F-156: macOS resource sampler. `libproc` wraps the Apple
# `proc_pidinfo` syscalls used to read task CPU time, resident-size, and
# open file-descriptor counts. Linux/Windows pull different crates via
# their own target stanzas below.
[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"

# F-156: Windows resource sampler. `windows-sys` is the zero-cost pure-FFI
# Microsoft-maintained binding crate. Feature set is surgical — one
# feature per module path — because the generated bindings are gated by
# these flags and the full crate would balloon compile times.
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support", "async_tokio"] }
forge-cli = { path = "../forge-cli" }
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
similar = "2"
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "time", "net", "process"] }
# F-371: capture subscriber in integration tests pins target + field shape
# for each tracing emission site.
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[[bench]]
name = "orchestrator"
harness = false

[[bench]]
name = "tool_invoke"
path = "benches/tool_invoke.rs"
harness = false

# F-575: resource-monitor concurrent-track + per-tick allocation bench.
# `background_agents_start_100` proves the std-mutex switch removes the
# `Mutex held across spawn` serialization (DoD: ≥10× speedup vs. an
# in-bench shadow that re-introduces the prior `tokio::sync::Mutex`
# pattern). `sampler_100_instances_60s` reports allocations/sec and
# bytes/sec for the steady-state tick path so any future regression
# (e.g. accidental tokio::fs::read_dir reintroduction) shows up as a
# numeric spike.
[[bench]]
name = "resource_monitor"
path = "benches/resource_monitor.rs"
harness = false

[[test]]
name = "headless_session_basic"
path = "tests/headless_session/basic.rs"

[[test]]
name = "session_ended"
path = "tests/session_ended.rs"

[[test]]
name = "archive"
path = "tests/archive.rs"

[[test]]
name = "archive_shutdown"
path = "tests/archive_shutdown.rs"

[[test]]
name = "provider_selection"
path = "tests/provider_selection.rs"

[[test]]
name = "pid_file_lifecycle"
path = "tests/pid_file_lifecycle.rs"

[[test]]
name = "uds_socket_permissions"
path = "tests/uds_socket_permissions.rs"

[[test]]
name = "socket_path_fallback"
path = "tests/socket_path_fallback.rs"

[[test]]
name = "uds_bind_symlink_race"
path = "tests/uds_bind_symlink_race.rs"

[[test]]
name = "session_error"
path = "tests/session_error.rs"

[[test]]
name = "rerun_replace"
path = "tests/rerun_replace.rs"

[[test]]
name = "agent_spawn"
path = "tests/agent_spawn.rs"

[[test]]
name = "agent_spawn_live"
path = "tests/agent_spawn_live.rs"

[[test]]
name = "step_events"
path = "tests/step_events.rs"

[[test]]
name = "bg_agents_tracing"
path = "tests/bg_agents_tracing.rs"

[[test]]
name = "eprintln_audit"
path = "tests/eprintln_audit.rs"

[[test]]
name = "credentials_pull"
path = "tests/credentials_pull.rs"
