[package]
name = "forge-shell"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "forge_shell"
path = "src/lib.rs"

[[bin]]
name = "forge-shell"
path = "src/main.rs"
required-features = ["webview"]

[build-dependencies]
png = { version = "0.17", optional = true }
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
# `futures::StreamExt::next` drives the session event forwarder and the
# per-connection MCP reply-router in `bridge.rs`.
futures = "0.3"
forge-agents = { path = "../forge-agents" }
forge-core = { path = "../forge-core" }
forge-fs = { path = "../forge-fs" }
forge-ipc = { path = "../forge-ipc" }
forge-lsp = { path = "../forge-lsp" }
# F-155: the shell's Tauri MCP commands dispatch over the session UDS
# bridge to the daemon's authoritative `McpManager`. forge-mcp is still
# a dependency (the integration tests in `tests/ipc_mcp.rs` build a
# manager in-process to pin the "server disabled" error-text contract),
# but the shell no longer runs a live manager of its own.
forge-mcp = { path = "../forge-mcp" }
forge-providers = { path = "../forge-providers" }
# F-137: `forge-shell` hosts `BackgroundAgentRegistry` (a `forge-session`
# library type) per-session so the three `start/promote/list_background_agent`
# Tauri commands can drive background-agent lifecycle directly rather than
# inventing a new request/response IPC. The bin-target (`forged`) in
# `forge-session` is not pulled into the shell binary — only the library.
forge-session = { path = "../forge-session" }
forge-term = { path = "../forge-term" }
# `rc`: `SessionEventPayload.event` embeds `forge_core::Event`, whose hot
# variants carry `Arc<str>` fields (F-112). `rc` lets serde serialize those
# without `ArcStr` workarounds; the payload is Serialize-only so this is
# purely for the outbound Tauri emit path.
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tauri = { version = "2", optional = true , features = [] }
# F-138: `.plugin(tauri_plugin_notification::init())` powers the OS-notification
# branch of `notifications.bg_agents`. Gated behind `webview` because the plugin
# pulls the full Tauri runtime; pure-Rust unit tests build without it.
tauri-plugin-notification = { version = "2", optional = true }
tokio = { version = "1", features = ["fs", "net", "io-util", "sync", "time", "rt", "rt-multi-thread", "macros"] }
# F-151: `set_setting` applies scalar updates against the raw TOML tree of
# `settings.toml` and round-trips through the canonical serializer to land
# on disk.
toml = "0.8"
# F-371: structured tracing across authz rejections, emit failures, and
# background-agent lifecycle transitions. No subscriber is installed in
# production; emission sites only.
tracing = "0.1"
ts-rs = "12"

[dev-dependencies]
# `forge-session` moved to `[dependencies]` as part of F-137 so the shell can
# own a `BackgroundAgentRegistry` per session.
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "time"] }
# F-371: capture subscriber in integration tests pins target + field shape
# for each tracing emission site.
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
wiremock = "0.6"

[features]
# `webview` pulls the full Tauri 2 runtime (wry + webkit2gtk on Linux).
# Enabled by default so `cargo build` and CI produce a runnable binary.
# Disable with `--no-default-features` to run pure-Rust unit tests on a
# host without WebKitGTK installed.
default = ["webview"]
webview = ["dep:tauri", "dep:tauri-build", "dep:png", "dep:tauri-plugin-notification"]
# Opt-in feature that activates Tauri's `test` helpers so integration tests
# can use `tauri::test::mock_builder`. Implies `webview`. Not on by default
# so production builds don't pull test scaffolding.
webview-test = ["webview", "tauri?/test"]
